# comfy_oiio

./: README.md  __init__.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build_dependencies.yml  publish.yml
comfy_oiio/: nodes.py
scripts/: build_oiio.nu  generate_stubs.nu
tests/: test_base.py
typings/OpenImageIO/: OpenImageIO.pyi  __init__.pyi
typings/OpenImageIO/.patches/: OpenImageIO_pyi_20250207_163132.patch  OpenImageIO_pyi_20250207_163132.patch.json  OpenImageIO_pyi_20250207_172814.patch  OpenImageIO_pyi_20250207_172814.patch.json
